--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -5,19 +5,22 @@
     android:id="@+id/layout_touchpad"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2A603D"
     android:orientation="vertical"
     tools:context=".TouchPad">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/touchpad"
         android:layout_width="match_parent"
-        android:layout_height="500dp">
+        android:layout_height="500dp"
+        android:background="@drawable/touchpad_background">
 
         <TextView
             android:id="@+id/txt_ip_port"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/waiting"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,44 +31,43 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@color/design_default_color_error"
+        android:background="#2C673D"
         android:backgroundTint="@color/primary_dark"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnLeft"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/primary_dark"
-            android:text="@string/leftBtn"
-            android:textColor="@color/white" />
+            android:background="@drawable/buttton_background"
+            android:foreground="@drawable/buttton_background"
+            android:text="Button" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/wheel"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/primary">
+            android:background="@drawable/touchpad_background">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/btnRight"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/primary_dark"
-            android:text="@string/rightBtn"
-            android:textColor="@color/white" />
+            android:background="@drawable/buttton_background"
+            android:foreground="@drawable/buttton_background"
+            android:text="Button" />
 
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/hWheel"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#D24C4C">
+        android:layout_height="150dp"
+        android:background="@drawable/touchpad_background">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
